samples/_failures_safe/1761473385_1f42b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ecebadd2.c: In function ‘main’:
./samples/SAFE/__tmp_ecebadd2.c:135:5: error: expected declaration or statement at end of input
  135 |     printf("Compression ratio: %.2f%%\n", (float)compressed.size / (float)input_len * 100.0);
      |     ^~~~~~
